force-app/main/default/objects/Website__c/Website__c.object-meta.xml
<CustomObject>
    <label>Website</label>
    <nameField>
        <label>Service name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Websites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>