force-app/main/default/objects/Website__c/fields/Age_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Age_Restriction__c</fullName>
    <label>Age Restriction (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>