force-app/main/default/objects/Website__c/fields/AML_policy__c.field-meta.xml
<CustomField>
    <fullName>AML_policy__c</fullName>
    <label>AML policy (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>