force-app/main/default/objects/Website__c/fields/Comply_Advantage_Screening__c.field-meta.xml
<CustomField>
    <fullName>Comply_Advantage_Screening__c</fullName>
    <label>Comply Advantage Screening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>