force-app/main/default/objects/Website__c/fields/Contact_Us_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_email__c</fullName>
    <label>Contact Us (email)</label>
    <type>Email</type>
</CustomField>