force-app/main/default/objects/Website__c/fields/Contact_Us_phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_phone__c</fullName>
    <label>Contact Us (phone)</label>
    <type>Phone</type>
</CustomField>