force-app/main/default/objects/Website__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>