force-app/main/default/objects/Website__c/fields/Domain_Ownership_in_WhoIs__c.field-meta.xml
<CustomField>
    <fullName>Domain_Ownership_in_WhoIs__c</fullName>
    <label>Domain Ownership in WhoIs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Different entity</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>