force-app/main/default/objects/Website__c/fields/Free_Trial_period__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_period__c</fullName>
    <label>Free Trial period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>