force-app/main/default/objects/Website__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Tangible Goods</fullName>
            </value>
            <value>
                <fullName>Intangible Goods</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Other Restricted Industries</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>