force-app/main/default/objects/Website__c/fields/Last_Months_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Last_Months_Traffic__c</fullName>
    <label>Last Months Traffic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>