force-app/main/default/objects/Website__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>