force-app/main/default/objects/Website__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>