force-app/main/default/objects/Website__c/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <label>Privacy Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>