force-app/main/default/objects/Website__c/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <label>Registered Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>