force-app/main/default/objects/Website__c/fields/Subscriptions_Membership__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Membership__c</fullName>
    <label>Subscriptions/Membership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>