force-app/main/default/objects/Website__c/fields/T_C__c.field-meta.xml
<CustomField>
    <fullName>T_C__c</fullName>
    <label>T&amp;C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wibsites_Picklist</valueSetName>
    </valueSet>
</CustomField>