force-app/main/default/objects/Website__c/fields/Test_Account_Username__c.field-meta.xml
<CustomField>
    <fullName>Test_Account_Username__c</fullName>
    <label>Test Account Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>