force-app/main/default/objects/Website__c/fields/Website_Included_in_the_License__c.field-meta.xml
<CustomField>
    <fullName>Website_Included_in_the_License__c</fullName>
    <label>Website Included in the License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>