force-app/main/default/objects/Website__c/fields/Website_Overall__c.field-meta.xml
<CustomField>
    <fullName>Website_Overall__c</fullName>
    <label>Website Overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>